Bunch of hero fixes for slant and dark mode

--- a/_includes/beatrice/00-global/_02-colors.scss
+++ b/_includes/beatrice/00-global/_02-colors.scss
@@ -46,6 +46,14 @@ $color-peach-light: #fff6e9;
 $color-peach: #eedbbf;
 $color-silver: #E5E5E5;
 
+$color-callout-wght: #ffccbc;
+$color-callout-wdth: #2196f3;
+$color-callout-ital: #ff8a65;
+$color-callout-slnt: #c8e6c9;
+$color-callout-opsz: #e1bee7;
+$color-callout-casl: #b2dfdb;
+
+
 /* functional assignments */
 
 $color-heading: $color-gray-900;
