--- a/_includes/beatrice/02-molecules/10-hero-animation/_hero.scss
+++ b/_includes/beatrice/02-molecules/10-hero-animation/_hero.scss
@@ -21,6 +21,7 @@
 
 .hero-sidebar {
   background: #EEEEEE;
+  background: var(--color-hero-sidebar);
   border: 1px solid #000000;
   border-radius: 8px;
   position: relative;
@@ -168,6 +169,7 @@
 
 .hero-button--active {
   background-color: var(--color-callout-highlight, #FFF8E1);  
+  color: var(--color-text);
 }
 
 .hero-animation-frame {
@@ -195,24 +197,25 @@
     transition: background-color 0.3s ease-in-out;  
 }
 
+
 [data-wght-active="true"]  {
-  --color-callout-highlight: #FFCCBC
+  --color-callout-highlight: $color-callout-wght;
 }
 
 [data-wdth-active="true"]  {
-  --color-callout-highlight: #2196F3;
+  --color-callout-highlight: $color-callout-wdth;
 }
 [data-ital-active="true"]  {
-  --color-callout-highlight: #FF8A65;
+  --color-callout-highlight: $color-callout-ital;
 }
 [data-slnt-active="true"]  {
-  --color-callout-highlight: #C8E6C9;
+  --color-callout-highlight: $color-callout-slnt;
 }
 [data-opsz-active="true"]  {
-  --color-callout-highlight: #E1BEE7;
+  --color-callout-highlight: $color-callout-opsz;
 }
 [data-casl-active="true"]  {
-  --color-callout-highlight: #B2DFDB;
+  --color-callout-highlight: $color-callout-casl;
 }
 
 
